# httpvoyager

./: .pre-commit-config.yaml  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: pre-commit.yml
tests/: conftest.py  test_http_client.py  test_introspection.py  test_logging_setup.py  test_parsing.py  test_storage.py  test_ws_tab.py
voyager/: __init__.py  app.py  cli.py  config.py  docs_tab.py  http_client.py  introspection.py  logging_setup.py  models.py  parsing.py  storage.py  tabs.py  ws_tab.py
voyager/ui/: buttons.py
voyager/ui_components/: __init__.py  buttons.py
voyager/ui_components/styles/: buttons.tcss  main.tcss
